--- a/Views/pokemonViews/pokemon-edit.hbs
+++ b/Views/pokemonViews/pokemon-edit.hbs
@@ -1,3 +1,5 @@
+<h1 class="display-1 text-center mt-5">EDIT POKEMON </h1>
+
 <form action="/pokemon/pokemon-edit" method="POST" onsubmit="return confirm('You sure you want to edit this pokemon?');" class="border p-4 rounded bg-light">
     <input type="hidden" name="id" id="id" value="{{pokemon.id}}"/>
     <div class="mb-3">
@@ -12,7 +14,7 @@
 
     <div class="mb-3">
         <label for="TypeId" class="form-label">Type:</label>
-        <select name="TypeId" id="TypeId" class="form-select">
+        <select name="TypeId" id="TypeId" class="form-select" required>
             <option value="">Select a type</option>
             {{#each types}}
             <option value="{{this.id}}" {{#if (equals this.id  ../pokemon.TypeId)}}selected{{/if}}>{{this.Name}}</option>
@@ -22,7 +24,7 @@
 
     <div class="mb-3">
         <label for="RegionId" class="form-label">Region:</label>
-        <select name="RegionId" id="RegionId" class="form-select">
+        <select name="RegionId" id="RegionId" class="form-select" required>
             <option value="">Select a Region</option>
             {{#each regions}}
             <option value="{{this.id}}" {{#if (equals this.id ../pokemon.RegionId)}} selected{{/if}}>{{this.Name}}</option>
