--- a/Views/regionViews/region-add.hbs
+++ b/Views/regionViews/region-add.hbs
@@ -1,3 +1,4 @@
+<h1 class="display-1 text-center mt-5">SAVE REGION </h1>
 <form action="/region/region-add" method="POST" onsubmit="return confirm('You sure you want to save this region?');" class="border p-4 rounded bg-light">
     <div class="mb-3">
         <label for="Name" class="form-label">Name:</label>
