--- a/Views/typeViews/type-add.hbs
+++ b/Views/typeViews/type-add.hbs
@@ -1,3 +1,4 @@
+<h1 class="display-1 text-center mt-5">SAVE TYPE </h1>
 <form action="/type/type-add" method="POST" onsubmit="return confirm('You sure you want to save this type?');" class="border p-4 rounded bg-light">
     <div class="mb-3">
         <label for="Name" class="form-label">Name:</label>
