--- a/Views/typeViews/type-edit.hbs
+++ b/Views/typeViews/type-edit.hbs
@@ -1,5 +1,6 @@
+<h1 class="display-1 text-center mt-5">EDIT TYPE </h1>
 
-<form action="/type/type-edit" method="POST" onsubmit="return confirm('You sure you want to update this type?');" class="border p-4 rounded bg-light">
+<form action="/type/type-edit" method="POST" onsubmit="return confirm('You sure you want to edit this type?');" class="border p-4 rounded bg-light">
     <input type="hidden" id="id" name="id" value="{{type.id}}">
     <div class="mb-3">
         <label for="Name" class="form-label">Name:</label>
