--- a/Views/typeViews/type-mant.hbs
+++ b/Views/typeViews/type-mant.hbs
@@ -1,4 +1,5 @@
-<a href="/type/type-add" class="btn btn-success mb-3">New Genre</a>
+<h1 class="display-1 text-center mt-5">TYPE MANTAINANCE</h1>
+<a href="/type/type-add" class="btn btn-success mb-3">New Type</a>
 
 <div class="row">
     {{#if IsEmpty}}
