--- a/Views/pokemonViews/pokemon-mant.hbs
+++ b/Views/pokemonViews/pokemon-mant.hbs
@@ -1,3 +1,5 @@
+
+<h1 class="display-1 text-center ">POKEMON MANTAINANCE</h1>
 <a href="/pokemon/pokemon-add" class="btn btn-success mb-3">New Pokemon</a>
 
 {{#if IsEmpty}}
@@ -7,13 +9,13 @@
         {{#each pokemons}}
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <a href="/series/detail-series/{{this.id}}">
                         <img src="{{ImgUrl}}" alt="{{Name}}" class="card-img-top">
-                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">{{this.Name}}</h5>
-                        <p class="card-text">{{this.region.dataValues.Name}}</p>
-                        <p class="card-text">{{this.type.dataValues.Name}}</p>
+                        <h5 class="card-title text-center text-primary">{{this.Name}}</h5>
+                     <div class="d-flex justify-content-between">
+                        <p class="card-text text-muted"><strong>Region:</strong> {{this.region.dataValues.Name}}</p>
+                        <p class="card-text  text-muted"><strong>Type:</strong> {{this.type.dataValues.Name}}</p> 
+                      </div>
                     </div>
                     <div class="card-footer text-center">
                         <form action="/pokemon/pokemon-delete" style="display: inline;" method="POST" onsubmit="return confirm('You sure you want to delete the series?');">
