--- a/Views/regionViews/region-edit.hbs
+++ b/Views/regionViews/region-edit.hbs
@@ -1,4 +1,6 @@
-<form action="/region/region-edit" method="POST" onsubmit="return confirm('You sure you want to update this region?');" class="border p-4 rounded bg-light">
+<h1 class="display-1 text-center mt-5">EDIT REGION </h1>
+
+<form action="/region/region-edit" method="POST" onsubmit="return confirm('You sure you want to edit this region?');" class="border p-4 rounded bg-light">
     <input type="hidden" id="id" name="id" value="{{region.id}}">
     
     <div class="mb-3">
