--- a/Views/regionViews/region-mant.hbs
+++ b/Views/regionViews/region-mant.hbs
@@ -1,3 +1,4 @@
+<h1 class="display-1 text-center mt-5">REGION MANTAINENCE </h1>
 <a href="/region/region-add" class="btn btn-success mb-3">New region</a>
 
 <div class="row">
